# vamos-mpt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  config.py  config.py.in  config.sh  config.sh.in  main.py  mptc  prefixexpr.py
codegen/: codegen.py
codegen/templates/cpp/: CMakeLists.txt.in  cfg.h  cfgs.cpp  cfgs.h  cfgs_impl.cpp  cfgset.h  events.h  inputs.h  main.cpp  monitor.cpp  monitor.h  mstring.cpp  mstring.h  prefixexpr.h  subword-compare.h  trace.cpp  trace.h  workbag.h
codegen/templates/cpp/partials/: cfg_methods.h  cfgs.cpp  events_begin.cpp  monitor_begin.h  monitor_end.h  move_cfg.h  update_traces.h
mpt/: mpt.py  mstring.py  pe.py  pet.py  prefixexpr.py
parser/: ast.py  context.py  decls.py  element.py  expr.py  parser.py  pattern.py  prefixexpr.py  transition.py
parser/grammars/: expr.lark  grammar.lark  pattern.lark  prefixexpr.lark  rules.lark
parser/types/: type.py
tests/: CMakeLists.txt  derivs.py  od.mpt  parsing-1.py  patterns.py  pet.py  prefixexpr.py
tests/OD/: CMakeLists.txt  inputs-false1.cpp  inputs-false2.cpp  inputs-false3.cpp  inputs-false4.cpp  inputs-true1.cpp  inputs-true2.cpp  inputs-true3.cpp  inputs-true4.cpp  inputs-true5.cpp  main.cpp  od.mpt  rand.vsrc
tools/: pet2dot.py
vamos_mpt/codegen/: codegen.py
vamos_mpt/codegen/templates/cpp/: CMakeLists.txt.in  cfg.h  main.cpp  monitor.cpp  mstring.cpp  mstring.h  trace.h
vamos_mpt/codegen/templates/cpp/partials/: cfg_methods.h  monitor_end.h  move_cfg.h
vamos_mpt/mpt/: mpt.py  pet.py  prefixexpr.py
vamos_mpt/parser/: ast.py  expr.py  parser.py  transition.py
vamos_mpt/parser/grammars/: expr.lark  prefixexpr.lark
