#target_compile_options(test2 PRIVATE -fsanitize=address,undefined)

set(MONITOR_TEST_MAIN main.cpp)

file(GLOB inputs "inputs*.cpp")
foreach(file ${inputs})
	string(REGEX MATCH "inputs-((.*)[0-9]+)\.cpp" _ ${file})
	message(STATUS "Generating: ${file} ${CMAKE_MATCH_1} ${CMAKE_MATCH_2}")

	add_custom_target(test-${CMAKE_MATCH_1} ALL
		COMMAND python  ../../main.py --reduction reflexivity --reduction symmetry --debug --exit-on-error
                        --overwrite-default main.cpp --out-dir "/tmp/${CMAKE_MATCH_1}" od.mpt ${file} main.cpp
		COMMAND cd "/tmp/${CMAKE_MATCH_1}/" && cmake .
		COMMAND make -C "/tmp/${CMAKE_MATCH_1}/" 
		COMMAND cp "/tmp/${CMAKE_MATCH_1}/monitor" test-${CMAKE_MATCH_1})

	#add_executable(test-${CMAKE_MATCH_1} ${MONITOR_TEST_MAIN} ${file})
	#target_include_directories(test-${CMAKE_MATCH_1} PUBLIC ${vamos-buffers_INCLUDE_DIRS})
	#target_include_directories(test-${CMAKE_MATCH_1} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../src)
	#target_link_libraries(test-${CMAKE_MATCH_1} PRIVATE monitor-od-dbg)

	add_test(NAME test-${CMAKE_MATCH_1}
		 COMMAND test-${CMAKE_MATCH_1} ${CMAKE_MATCH_2})
endforeach()

